[gd_scene load_steps=18 format=3 uid="uid://0c32kepv0ahx"]

[ext_resource type="Script" path="res://Scenes/Scripts/Player_Hud_Manager.gd" id="1_0wdkf"]
[ext_resource type="Texture2D" uid="uid://cqlqo6ga2f71s" path="res://Scenes/Assets/Graphics/Crosshair.png" id="3_ahile"]
[ext_resource type="Texture2D" uid="uid://b45endup5sujv" path="res://Scenes/Assets/Textures/CameraDamageVignette.png" id="3_lb6l4"]
[ext_resource type="Texture2D" uid="uid://dgvti6embqgw3" path="res://Scenes/Assets/Graphics/HintIcons/Hint_Exclamation.png" id="3_o56n0"]
[ext_resource type="Texture2D" uid="uid://ryhle5u4d4mn" path="res://Scenes/Assets/Graphics/InputIcons/Keyboard/Keyboard_F.png" id="4_2dtpt"]
[ext_resource type="Texture2D" uid="uid://0tbm6xivmc85" path="res://Scenes/Assets/Graphics/ProgressBar_FiveUnits.png" id="6_f5jpm"]
[ext_resource type="PackedScene" uid="uid://btf6bmlgtfk1b" path="res://Scenes/Components/DynamicInputIcon.tscn" id="12_jgxar"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1f12m"]
blend_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_qgnac"]
font_size = 18
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r3e1p"]
font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5gow8"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_35jhq"]

[sub_resource type="LabelSettings" id="LabelSettings_ossw8"]
font_size = 24
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cmrj"]
bg_color = Color(0.0117647, 0.6, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnlae"]
bg_color = Color(0.6, 0.509804, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbswy"]
bg_color = Color(0.6, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbke8"]
bg_color = Color(0, 0, 0, 1)

[node name="Player_HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0wdkf")
default_hint_icon = ExtResource("3_o56n0")

[node name="DamageOverlay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="DamageOverlay"]
material = SubResource("CanvasItemMaterial_1f12m")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lb6l4")
expand_mode = 5

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ahile")
expand_mode = 1

[node name="ButtonPrompt" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonPrompt"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_right = 37.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="InteractionButton_old" type="TextureRect" parent="ButtonPrompt/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
texture = ExtResource("4_2dtpt")
expand_mode = 2

[node name="Container" type="MarginContainer" parent="ButtonPrompt/HBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="InteractionButton" parent="ButtonPrompt/HBoxContainer/Container" instance=ExtResource("12_jgxar")]
position = Vector2(0, 0)
scale = Vector2(0.4, 0.4)
centered = false
frame = 6

[node name="InteractionText" type="Label" parent="ButtonPrompt/HBoxContainer"]
layout_mode = 2
text = "Interact"
label_settings = SubResource("LabelSettings_qgnac")

[node name="HintPrompt" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="HintPrompt"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HintPrompt/MarginContainer"]
layout_mode = 2

[node name="HintIcon" type="TextureRect" parent="HintPrompt/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("3_o56n0")
expand_mode = 2

[node name="HintText" type="Label" parent="HintPrompt/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Hint text appears here and can be longer."
label_settings = SubResource("LabelSettings_qgnac")

[node name="HintTimer" type="Timer" parent="."]
wait_time = 3.5

[node name="UseBar" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 762.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="UseBar"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="WieldablePrimaryUse" type="HBoxContainer" parent="UseBar/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="UseBar/HBoxContainer/WieldablePrimaryUse"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PrimaryUseIcon" parent="UseBar/HBoxContainer/WieldablePrimaryUse/MarginContainer" instance=ExtResource("12_jgxar")]
position = Vector2(20, 20)
scale = Vector2(0.4, 0.4)

[node name="PrimaryUseLabel" type="Label" parent="UseBar/HBoxContainer/WieldablePrimaryUse"]
layout_mode = 2
text = "Primary Use"
label_settings = SubResource("LabelSettings_r3e1p")

[node name="Separator" type="Panel" parent="UseBar/HBoxContainer"]
visible = false
modulate = Color(1, 1, 1, 0.490196)
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5gow8")

[node name="WieldableData" type="HBoxContainer" parent="UseBar/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="WieldableIcon" type="TextureRect" parent="UseBar/HBoxContainer/WieldableData"]
layout_mode = 2
texture = SubResource("CompressedTexture2D_35jhq")
expand_mode = 3

[node name="WieldableText" type="Label" parent="UseBar/HBoxContainer/WieldableData"]
layout_mode = 2
text = "00/00"
label_settings = SubResource("LabelSettings_ossw8")

[node name="PlayerAttributes" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -10.0
offset_right = 104.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PlayerAttributes"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerAttributes/MarginContainer"]
layout_mode = 2

[node name="BrightnessBar" type="TextureProgressBar" parent="PlayerAttributes/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 40.0
texture_progress = ExtResource("6_f5jpm")

[node name="SanityBar" type="ProgressBar" parent="PlayerAttributes/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 16)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_0cmrj")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerAttributes/MarginContainer/VBoxContainer/SanityBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="PlayerAttributes/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 16)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_nnlae")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerAttributes/MarginContainer/VBoxContainer/StaminaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "50/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="PlayerAttributes/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 18)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_tbswy")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerAttributes/MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rbke8")

[node name="BoxContainer" type="BoxContainer" parent="DeathScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -49.5
offset_right = 175.0
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen/Panel/BoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DeathScreen/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DeathScreen/Panel/BoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "You died."
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="DeathScreen/Panel/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Restart"

[connection signal="timeout" from="HintTimer" to="." method="_on_hint_timer_timeout"]
[connection signal="pressed" from="DeathScreen/Panel/BoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
